--- a/DirectXTest/DirectXTest.vcxproj
+++ b/DirectXTest/DirectXTest.vcxproj
@@ -131,8 +131,15 @@
   <ItemGroup>
     <ClInclude Include="ChiliException.h" />
     <ClInclude Include="ChiliWin.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Windows.h" />
     <ClInclude Include="WindowsMessageMap.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DirectXTest.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="IconTest.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
