--- a/DirectXTest/DirectXTest.vcxproj
+++ b/DirectXTest/DirectXTest.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="ChiliException.cpp" />
     <ClCompile Include="Keyboard.cpp" />
+    <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="WindowsMessageMap.cpp" />
     <ClCompile Include="WinMain.cpp" />
@@ -133,6 +134,7 @@
     <ClInclude Include="ChiliException.h" />
     <ClInclude Include="ChiliWin.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="Mouse.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Windows.h" />
     <ClInclude Include="WindowsMessageMap.h" />
